fix: change set definition to java 8 compatible